adding halview AR to my projects.

--- a/my-projects.html
+++ b/my-projects.html
@@ -526,6 +526,30 @@
                 </div>
             </div>
         </article>
+        <article class="card">
+            <header class="card-header">
+                <a href="/games/augmented-reality.html" style="text-decoration: none;">
+                    <h2 style="color:white;">HoloView AR</h2>
+                    <p><br>Experience cutting-edge augmented reality—tap 'View in AR' to place these 3D holograms in
+                        your real world! Watch as animated characters and objects come to life in your room through your
+                        smartphone camera.
+                    </p>
+                </a>
+
+            </header>
+            <div class="card-author">
+                <a href="/games/augmented-reality.htm" class="author-avatar">
+                    <img src="/imgs/haloview-ar.jpg" alt="HoloView AR Icon">
+                </a>
+                <svg class="half-circle" viewBox="0 0 106 57">
+                    <path d="M102 4c0 27.1-21.9 49-49 49S4 31.1 4 4"></path>
+                </svg>
+                <div class="author-name">
+                    <div class="author-name-prefix">Author</div>
+                    Ravzzy
+                </div>
+            </div>
+        </article>
     </section>
     <div class="social-handle">
         <a href="https://github.com/ravzzy" target="_blank">
