my-project alignment

--- a/my-projects.html
+++ b/my-projects.html
@@ -531,7 +531,7 @@
                 <a href="/games/augmented-reality.html" style="text-decoration: none;">
                     <h2 style="color:white;">HoloView AR</h2>
                     <p><br>Experience cutting-edge augmented reality—tap 'View in AR' to place these 3D holograms in
-                        your real world! Watch as animated characters and objects come to life in your room through your
+                        your real world! Watch as animated characters come to life in your room through your
                         smartphone camera.
                     </p>
                 </a>
