--- a/app/chandigarh-tourist-map/index.html
+++ b/app/chandigarh-tourist-map/index.html
@@ -6,13 +6,16 @@
     <title>Chandigarh Tourist Map</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="app-container">
         <header>
-            <h1><i class="fas fa-map-marked-alt"></i> Chandigarh Tourist Map</h1>
+            <h1><i class="fas fa-map-marked-alt"></i> Chandigarh: Things To Do</h1>
             <div class="mobile-controls">
                 <button id="filter-toggle"><i class="fas fa-filter"></i> Filters</button>
                 <button id="locate-btn"><i class="fas fa-location-arrow"></i></button>
@@ -55,6 +58,9 @@
                 <div id="map"></div>
                 <div class="map-legend">
                     <div><i class="fas fa-utensils"></i> Restaurants</div>
+                    <div><i class="fas fa-hotel"></i> Hotels</div>
+                    <div><i class="fas fa-coffee"></i> Cafe</div>
+                    <div><i class="fas fa-burger"></i> Fast Food</div>
                     <div><i class="fas fa-landmark"></i> Historical</div>
                     <div><i class="fas fa-toilet"></i> Toilets</div>
                     <div><i class="fas fa-shopping-bag"></i> Shopping</div>
