--- a/app/chandigarh-tourist-map/index.html
+++ b/app/chandigarh-tourist-map/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="app-container">
         <header>
-            <h1><i class="fas fa-map-marked-alt"></i> Chandigarh: Things To Do</h1>
+            <h1><i class="fas fa-map-marked-alt"></i> Chandigarh: Places of Interest</h1>
             <div class="mobile-controls">
                 <button id="filter-toggle"><i class="fas fa-filter"></i> Filters</button>
                 <button id="locate-btn"><i class="fas fa-location-arrow"></i></button>
