swapped the chevron right/left button default

--- a/app/chandigarh-tourist-map/home.html
+++ b/app/chandigarh-tourist-map/home.html
@@ -464,7 +464,7 @@
     <!-- Attractions Panel -->
     <div class="attractions-container" id="attractions-container">
         <div class="attractions-handle" id="attractions-handle">
-            <i id="chevron-handle" class="fa-solid fa-chevron-right"></i>
+            <i id="chevron-handle" class="fa-solid fa-chevron-left"></i>
         </div>
         <div class="attractions-content">
             <div class="attractions-header">
@@ -480,7 +480,7 @@
             <i class="fas fa-location-arrow"></i>
         </button>
         <button class="map-control-btn" id="toggle-panel-btn" title="Toggle panel">
-            <i id="chevron-btn" class="fa-solid fa-chevron-right"></i>
+            <i id="chevron-btn" class="fa-solid fa-chevron-left"></i>
         </button>
     </div>
 
@@ -905,7 +905,6 @@
 
 
         // Toggle attractions panel
-        // Toggle attractions panel
 // Wait for DOM to be fully loaded
 document.addEventListener('DOMContentLoaded', function() {
     // Get references to elements
@@ -930,17 +929,17 @@ document.addEventListener('DOMContentLoaded', function() {
     const panelBtnIcon = document.getElementById('chevron-btn');
 
     if (handleIcon && panelBtnIcon) {
-        const iconName = isPanelOpen ? 'chevron-left' : 'chevron-right';
+        const iconName = isPanelOpen ? 'chevron-right' : 'chevron-left';
 
         // Font Awesome auto-replaces <i> with <svg>, so we update data-icon
         handleIcon.setAttribute('data-icon', iconName);
         panelBtnIcon.setAttribute('data-icon', iconName);
 
         // Optional: also update class to help with fallback
-        handleIcon.classList.remove('fa-chevron-left', 'fa-chevron-right');
+        handleIcon.classList.remove('fa-chevron-right', 'fa-chevron-left');
         handleIcon.classList.add(`fa-${iconName}`);
 
-        panelBtnIcon.classList.remove('fa-chevron-left', 'fa-chevron-right');
+        panelBtnIcon.classList.remove('fa-chevron-right', 'fa-chevron-left');
         panelBtnIcon.classList.add(`fa-${iconName}`);
     } else {
         console.warn('Chevron icons not found');
