--- a/app/chandigarh-tourist-map/home.html
+++ b/app/chandigarh-tourist-map/home.html
@@ -17,7 +17,7 @@
             --success: #4ade80;
             --warning: #fbbf24;
             --danger: #f87171;
-            --light: #f8f9fa;
+            --light: #f1f1f1;
             --dark: #1e293b;
             --gray: #94a3b8;
             --radius: 8px;
@@ -168,7 +168,7 @@
             top: 0;
             bottom: 0;
             width: var(--panel-width);
-            background: white;
+            background: #f1f1f1;
             box-shadow: var(--shadow);
             z-index: 100;
             display: flex;
@@ -189,7 +189,8 @@
             transform: translateY(-50%);
             width: 40px;
             height: 80px;
-            background: white;
+            /*background: #e61618;*/
+            background: var(--primary);
             border-radius: var(--radius) 0 0 var(--radius);
             box-shadow: var(--shadow);
             display: flex;
@@ -197,6 +198,7 @@
             justify-content: center;
             cursor: pointer;
             z-index: 10;
+            color: white;
         }
 
         .attractions-handle i {
@@ -252,7 +254,7 @@
         }
 
         .attraction-item:hover {
-            background: #f8fafc;
+            background: var(--light);
         }
 
         .attraction-item h4 {
@@ -288,7 +290,7 @@
         .map-controls {
             position: absolute;
             right: calc(var(--panel-width) + 20px);
-            top: 10px;
+            top: 100px;
             z-index: 100;
             display: flex;
             flex-direction: column;
@@ -305,7 +307,7 @@
         }
 
         .map-control-btn {
-            background: white;
+            background: var(--primary);
             border: none;
             width: 40px;
             height: 40px;
@@ -315,7 +317,7 @@
             justify-content: center;
             box-shadow: var(--shadow);
             cursor: pointer;
-            color: var(--dark);
+            color: white;
         }
 
         .map-legend {
@@ -486,7 +488,7 @@
 
 
     <!-- Map Legend -->
-    <div class="map-legend">
+    <!--<div class="map-legend">
         <div><i class="fas fa-utensils"></i> Restaurants</div>
         <div><i class="fas fa-hotel"></i> Hotels</div>
         <div><i class="fas fa-coffee"></i> Cafe</div>
@@ -497,7 +499,7 @@
         <div><i class="fas fa-university"></i> Museums</div>
         <div><i class="fas fa-pray"></i> Religious</div>
         <div><i class="fas fa-tree"></i> Parks</div>
-    </div>
+    </div> -->
 
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <script src="https://unpkg.com/leaflet.markercluster@1.4.1/dist/leaflet.markercluster.js"></script>
