--- a/my-projects.html
+++ b/my-projects.html
@@ -550,6 +550,29 @@
                 </div>
             </div>
         </article>
+        <article class="card">
+            <header class="card-header">
+                <a href="/app/chandigarh-tourist-map/home.html" style="text-decoration: none;">
+                    <h2 style="color:white;">Chandigarh Tourist Map</h2>
+                    <p><br>The Chandigarh Tourist Map guides visitors to top attractions and eateries with an
+                        interactive, free map. Easily navigate to the best sights and dining spots.
+                    </p>
+                </a>
+
+            </header>
+            <div class="card-author">
+                <a href="/app/chandigarh-tourist-map/home.html" class="author-avatar">
+                    <img src="/imgs/chd-tourist-map.jpg" alt="Chandigarh Tourist Map Icon">
+                </a>
+                <svg class="half-circle" viewBox="0 0 106 57">
+                    <path d="M102 4c0 27.1-21.9 49-49 49S4 31.1 4 4"></path>
+                </svg>
+                <div class="author-name">
+                    <div class="author-name-prefix">Author</div>
+                    Ravzzy
+                </div>
+            </div>
+        </article>
     </section>
     <div class="social-handle">
         <a href="https://github.com/ravzzy" target="_blank">
