added more places to the list

--- a/app/chandigarh-tourist-map/home.html
+++ b/app/chandigarh-tourist-map/home.html
@@ -578,7 +578,7 @@
                 type: "hotels",
                 price: "high",
                 image: "https://dynamic-media-cdn.tripadvisor.com/media/photo-o/2c/20/5c/cb/exterior.jpg?w=1400&h=800&s=1",
-                description: "Upscale hotel with elegant dining options.",
+                description: "Luxury 5 Star hotel with modern amenities and fine dining.",
                 website: "https://www.tajhotels.com/en-in/hotels/taj-chandigarh",
                 openingHours: "7:00 AM - 11:00 PM",
                 rating: "4.4/5"
@@ -621,7 +621,7 @@
                 type: "shopping",
                 price: "medium",
                 image: "https://www.nexusselecttrust.com/resources/assets/images/nexus-elante/exterior/Exterior06.jpg",
-                description: "One of the largest malls in North India.",
+                description: "A large shopping mall with various brands, eateries and a cinema hall.",
                 website: "https://www.nexusselecttrust.com/nexus-elante",
                 openingHours: "10:00 AM - 10:00 PM",
                 rating: "4.6/5"
@@ -757,8 +757,89 @@
                 image: "https://lh3.googleusercontent.com/p/AF1QipM8Lz9XDIxcs3NtZlHG5vW2vwOrvFSPbsAo4-Ho=w400-h281-k-no",
                 description: "A beautiful mosque with stunning architecture.",
                 rating: "4.7/5"
+            },
+            {
+                id: 18,
+                name: "Ovenfresh, Sector 7",
+                location: [30.729612596967787, 76.80135065842619],
+                type: "cafe",
+                price: "moderate",
+                image: "https://lh3.googleusercontent.com/gpms-cs-s/AIMqDu1ItMP4QpEazdO4hohfJg-OZovqN3hmVAtaHoTSbMWx2N1192LXPoYW8R8nvIKtf5qKqAn_NCblUSpfhXQMM7uV3rZ2H63u8_3GJdq9GbHk3IJrxtfrxtX9hoz0LTAa_taMT_aj=w400-h300-k-no",
+                openingHours: "11:00 AM – 11:00 PM",
+                description: "A popular bakery and cafe known for its delicious pizzas, pastries and cakes.",
+                rating: "4.5/5"
+            },
+            {
+                id: 19,
+                name: "Terraced Garden, Sector 33",
+                location: [30.71443241034554, 76.77166724002808],
+                type: "park",
+                image: "https://lh3.googleusercontent.com/gpms-cs-s/AIMqDu058sjE-hyTysScp82no9TMiDHJcseZLiU1ax_j3ntrwlnEjFhmuw_fo02U5-bJFEdGhEO9HvRx3JBuqW99LQcG75HP2QtfiF0qRusPjeVQi3cU0VCT-1iLxpl-nnUfGCCehUvnOw=w400-h300-k-no",
+                description: "Tranquil terraced garden with a musical fountain, walking paths & seasonal flower festivals.",
+                openingHours: "5:30 AM – 9:00 PM",
+                rating: "4.5/5"
+            },
+            {
+                id: 20,
+                name: "Chandigarh Architecture Museum, Sector 10",
+                location: [30.748132464272324, 76.78701059155921],
+                type: "museum",
+                image: "https://lh3.googleusercontent.com/gpms-cs-s/AIMqDu2U-q0OXBN7Y8dPjJPTQQqaI9R7TS5e9SqL1g01DLn7SKj0py42V_NsuMvVC-5bB2bi3dWIJ1QQJZTgJIwm0OXXWFDZrwbU0iDHJnfIBmvoVo10_1RZ5pUnioisIpuGYEk3uQYj=w400-h299-k-no",
+                description: "Museum showcasing Chandigarh's architectural history. Museum highlighting the effect that Le Corbusier's famous works of architecture had on the city.",
+                openingHours: "9:45 AM – 4:30 PM",
+                website: "https://chandigarhtourism.gov.in/pages/museums/chandigarh_architecture_museum",
+                rating: "4.5/5"
+            },
+            {
+                id: 21,
+                name: "Fateh Burj - Baba Banda Singh Bahadur War Memorial, Sector 93, SAS Nagar",
+                location: [30.703724291076465, 76.66835972315894],
+                type: "historical",
+                image: "https://lh3.googleusercontent.com/gps-cs-s/AB5caB_XExLnqBMqzoGkWAIKxKg5rPUCXnX0NR7lkt96-W1OmQAkmk-BE-X3cv6op6R2Uby7zEf0Hbr9MtgAV8MXLysbrxbqamAWAU6npsGCASMBwZr0RVMJdKRiaHR_3YkBoN-UK76R=s1360-w1360-h1020",
+                description: "100-m. minaret dedicated to the Sikh military commander Baba Banda Singh Bahadur.",
+                openingHours: "9:00 AM – 8:00 PM",
+                rating: "4.5/5"
+            },
+            {
+                id: 22,
+                name: "JW Marriot, Sector 35",
+                location: [30.726567096670653, 76.76719770468856],
+                type: "hotels",
+                image: "https://photos.hotelbeds.com/giata/original/21/210552/210552a_hb_p_001.jpg",
+                description: "Luxury 5 Star hotel with modern amenities.",
+                price: "high",
+                openingHours: "24/7",
+                website: "https://www.marriott.com/en-us/hotels/ixcjw-jw-marriott-hotel-chandigarh/overview/",
+                rating: "4.5/5"
+            },
+            {
+                id: 22,
+                name: "The LaLiT, Rajiv Gandhi IT Park",
+                location: [30.73061637751608, 76.8412475676239],
+                type: "hotels",
+                image: "https://lh3.googleusercontent.com/p/AF1QipM0hh24yjrsdzAwsWk5iT2MmjvJoI4o2ybkJ8Qw=w400-h197-k-no",
+                description: "Luxury 5 Star hotel with modern amenities.",
+                price: "high",
+                openingHours: "24/7",
+                website: "https://www.thelalit.com/the-lalit-chandigarh/",
+                rating: "4.4/5"
+            },
+            {
+                id: 22,
+                name: "Swagath, Sector 26",
+                location: [30.728485944115278, 76.80254755716716],
+                type: "restaurant",
+                image: "https://lh3.googleusercontent.com/gpms-cs-s/AIMqDu3lg33bwG1aXaDLG15BRGLkCXxpxJ6m7gBswrJpPVo1HVavZVLbJE-Jk4tzTk8KUPDLLAlJfgTeRFIL9Jy-nC5xldGsMJR1_43BCAWeG51OoLHR7E8sIXTGR-Zp7Plya8w_1FEbXg=w400-h286-k-no",
+                description: "A wide variety of regional Indian seafood dishes served in a refined, earth-toned dining room.",
+                price: "high",
+                openingHours: "11 AM – 2 AM",
+                website: "https://swagath.net/",
+                rating: "4.3/5"
             }
+
         ];
+        
+        
 
         // Store all markers and list items
         const allMarkers = [];
